--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-navs {
+    background-color: #30302f;
+}
+
+.bg-main {
+    background-color: #212120;
+}
